...
            android:layout_marginStart="30dp"
            app:srcCompat="@drawable/microchip_solid"
            app:tint="@color/blackLight" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/content"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
...
